syntax = "proto3";
package SharpLife.Networking.Shared.Messages.Server;

//Print a message as Information
message Print
{
	string message_contents = 1;
}
