syntax = "proto3";
package SharpLife.Networking.Shared.Messages.Server;

//Information about the server that the client needs to know
message ServerInfo
{
	uint32 protocol_version = 1;
	int32 spawn_count = 2;
	bytes client_dll_md5 = 3;
	uint32 max_clients = 4;
	string game_name = 5;
	string host_name = 6;
	//Message containing game info, provided by game
	bytes game_info = 7;
}
